--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
 <!DOCTYPE html>
+<style>
+.css-selector {
+    background: linear-gradient(342deg, #00f2ff, #f200ff);
+    background-size: 400% 400%;
+
+    -webkit-animation: Weee 0s ease infinite;
+    -moz-animation: Weee 0s ease infinite;
+    animation: Weee 0s ease infinite;
+}
+
+@-webkit-keyframes Weee {
+    0%{background-position:14% 0%}
+    50%{background-position:87% 100%}
+    100%{background-position:14% 0%}
+}
+@-moz-keyframes Weee {
+    0%{background-position:14% 0%}
+    50%{background-position:87% 100%}
+    100%{background-position:14% 0%}
+}
+@keyframes Weee {
+    0%{background-position:14% 0%}
+    50%{background-position:87% 100%}
+    100%{background-position:14% 0%}
+}
+</style>
 <html>
 <body>
 <h1>Hello World</h1>
