--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@ body {
 }
 
 #boop {
+	margin: 300 100;
+	padding: 50px 200px;
+	background-color: white;
+	border-radius: 25px;
+	text-align: center;
+}
 
+#bap {
+	border-radius: 100px;
 }
 </style>
 <div id="boop">
-<h1></h1>
+<img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
+<h1>Petri</h1>
+<p>Chicken Nuggies!</p>
 </div>
