--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 
 #boop {
-	margin: 300 100;
+	margin-top: 300px;
 	padding: 50px 200px;
 	background-color: white;
 	border-radius: 25px;
