--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ body {
 
 #boop {
 	margin-top: 300px;
+	margin-left: 200px;
+	margin-right: 200px;
 	padding: 50px 200px;
 	background-color: white;
 	border-radius: 25px;
