--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ body {
 	background-color: white;
 	border-radius: 25px;
 	text-align: center;
+	font-family: sans-serif;
+	display: inline-block;
 }
 
 #bap {
@@ -35,5 +37,5 @@ body {
 <div id="boop">
 <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
 <h1>Petri</h1>
-<p>Chicken Nuggies!</p>
+<p>I like Chicken Nuggies!</p>
 </div>
