--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@ body {
 	}
 }
 
-#boop {
-	margin-top: 300px;
-	margin-left: 200px;
-	margin-right: 200px;
-	padding: 50px 200px;
+.boop {
+  margin: 200px 200px 200px 200px;
+	padding: 50px 240px;
 	background-color: white;
 	border-radius: 25px;
 	text-align: center;
@@ -34,7 +32,7 @@ body {
 	border-radius: 100px;
 }
 </style>
-<div id="boop">
+<div class="boop">
 <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
 <h1>Petri</h1>
 <p>I like Chicken Nuggies!</p>
