--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ body {
 }
 
 .boop {
-  margin: 200px 200px 200px 200px;
-	padding: 50px 240px;
+  transform: translateY(50%) translateX(50%);
+	padding: 50px 250px;
 	background-color: white;
 	border-radius: 25px;
 	text-align: center;
