--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ body {
 }
 
 .boop {
-  transform: translateY(50%) translateX(50%);
+  margin-top: 300px;
+	margin-left: 400px;
 	padding: 50px 250px;
 	background-color: white;
 	border-radius: 25px;
