--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
 .boop {
   margin-top: 300px;
 	margin-left: 500px;
+	margin-right: auto;
 	padding: 50px 250px;
 	background-color: white;
 	border-radius: 25px;
