--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ body {
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
+	background-image: url('https://cdn.discordapp.com/attachments/752139396643553382/798396481538097162/sample_bc9dba242d1018ce0dfab49b8375ca57.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 @keyframes gradient {
@@ -34,8 +38,12 @@ body {
 	border-radius: 100px;
 }
 </style>
-<div class="boop">
-<img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
-<h1>Petri</h1>
-<p>I like Chicken Nuggies!</p>
-</div>
+<html>
+<body>
+  <div class="boop">
+    <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
+    <h1>Petri</h1>
+    <p>I like Chicken Nuggies!</p>
+  </div>
+</body>
+</html>
