--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ body {
 	background: linear-gradient(-45deg, #ee775290, #e73c7e90, #23a6d590, #23d5ab90);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
+	z-index: 2;
 }
 
 html {
@@ -12,7 +13,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   margin: -8px;
-	animation: gradient 15s ease infinite;
+	z-index: 1;
 }
 
 @keyframes gradient {
