--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <style>
 body {
 	background: linear-gradient(-45deg, #ee775290, #e73c7e90, #23a6d590, #23d5ab90);
-	background-size: 400% 400%;
+	background-size: cover;
 	animation: gradient 15s ease infinite;
-	z-index: 2;
 }
 
 html {
@@ -13,7 +12,6 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   margin: -8px;
-	z-index: 1;
 }
 
 @keyframes gradient {
