--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <style>
 body {
-	background: linear-gradient(-45deg, #ee775290, #e73c7e90, #23a6d590, #23d5ab90);
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: cover;
 	animation: gradient 15s ease infinite;
 }
