--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@ body {
 	text-align: center;
 	font-family: sans-serif;
 	display: inline-block;
+	font-size: 30px;
 }
 
 #bap {
-	border-radius: 100px;
+	border-radius: 300px;
 }
 </style>
 <html>
 <body>
 	<div class="boop">
-    <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
+    <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=256" id="bap">
     <h1>Petri</h1>
     <p>I like Chicken Nuggies!</p>
   </div>
