--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@ body {
 }
 
 .boop {
-  margin-top: 300px;
-	margin-left: 700px;
-	margin-right: auto;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 	padding: 50px 250px;
 	background-color: white;
 	border-radius: 45px;
-	text-align: center;
+	text-align: center !important;
 	font-family: sans-serif;
 	display: inline-block;
 }
