--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 				  <img class="yee" id="hov" onclick="enlargeImg(this)" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png">
 		    </a>
 			</div>
+			<button id="boop">
+				About Me
+			</button>
   	</div>
   </div>
 </body>
