--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				  <img class="yee" id="hov" onclick="enlargeImg(this)" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png">
 		    </a>
 			</div>
-			<button id="boop" href="aboutme.html">
+			<a id="boop" href="aboutme.html">
 				About Me
-			</button>
+			</a>
   	</div>
   </div>
 </body>
