--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <title>Petri's Website</title>
+  <title>Petri's About Page</title>
   <link rel="icon" href="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128">
   <link rel="stylesheet" type="text/css" href="main.css"/>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 <html>
 <body>
@@ -10,7 +11,7 @@
     <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
     <h1>Petri</h1>
     <p>Poopies!</p>
-    <a id="boop" href="index.html">
+    <a id="boop" onclick="redirect(this)" href="index.html">
       Go Back
     </a>
   </div>
