--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,6 @@
   <title>Petri's About Page</title>
   <link rel="icon" href="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128">
   <link rel="stylesheet" type="text/css" href="main.css"/>
-  <script type="text/javascript" src="main.js"></script>
 </head>
 <html>
 <body>
@@ -17,3 +16,9 @@
   </div>
 </body>
 </html>
+<script>
+  function redirect(body) {
+      body.style.transform = "scale(-1)";
+      body.style.transition = "transform 0.5s ease";
+  }
+</script>
