--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 	<div class="boop">
     <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
     <h1>Petri</h1>
-    <p>Poopies!</p>
+    <p>I am Gamer!</p>
     <a id="boop" onclick="redirect(this)" href="index.html">
       Go Back
     </a>
