--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="boop">
     <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
     <h1>Petri</h1>
-    <p>I like Chicken Nuggies!</p>
+    <p>I like Chicken Nuggets!</p>
 		<div>
       <div class="buttons">
         <a style="color:Black" href="https://github.com/Petrine51">
