--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
 	<div class="boop">
     <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
     <h1>Petri</h1>
+    <h1>About Me</h1>
     <p><strong>Discord:</strong> Petrine51#2729</br>
     <strong>Twitter:</strong> @Petrine51</br>
   </p>
