--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,8 @@
 <body>
 	<div class="boop">
     <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
-    <h1>Petri<br>
-    About Me</h1>
+    <h1>Petri</h1>
+    <h2>About Me</h2>
     <p><strong>Discord:</strong> Petrine51#2729</br>
     <strong>Twitter:</strong> @Petrine51</br>
   </p>
