--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
 <body>
 	<div class="boop">
-    <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
+    <img src="https://twitter.com/Petrine51/photo" id="bap">
     <h1>Petri</h1>
     <p>I like Games!</p>
 		<div>
