--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
-	<link rel="icon" id="bap" href="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128">
+	<link rel="icon" id="bap" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
 </head>
