--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
 <body>
 	<div class="boop">
-    <img src="https://twitter.com/Petrine51/photo" id="bap">
+    <img src="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" id="bap">
     <h1>Petri</h1>
     <p>I like Games!</p>
 		<div>
