--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
   <title>Petri's About Page</title>
-  <link rel="icon" href="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128">
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
   <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <html>
 <body>
 	<div class="boop">
-    <img src="https://cdn.discordapp.com/avatars/289986744705744898/ab6a962e2663902613ae1746957aea55.png?size=128" id="bap">
+    <img src="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" id="bap">
     <h1>Petri</h1>
     <h2>About Me</h2>
     <p><strong>Discord:</strong> Petrine51#2729</br>
