--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="icon" id="bap" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
+	<meta name="description" content="weeeeeeeeeeeeeeeeeeeeeee abababawdadawdadaw">
 </head>
 <html>
 <body>
