--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
+    <meta content="Embed Title" property="og:title" />
+    <meta content="Site Description" property="og:description" />
+    <meta content="https://petrine51.github.io/Petri/" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 	<link rel="icon" id="bap" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
-	<meta name="description" content="weeeeeeeeeeeeeeeeeeeeeee abababawdadawdadaw">
 </head>
 <html>
 <body>
