--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
-  <meta content="Petri's Website" property="og:title" />
-  <meta content="PogChamp!" property="og:description" />
-  <meta content="https://petrine51.github.io/Petri/" property="og:url" />
-  <meta content="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" property="og:image" />
-  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-	<link rel="icon" id="bap" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
+	<meta property="og:title" content="Petri's Website" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://petrine51.github.io/Petri/" />
+  <meta property="og:description" content="PogChamp!" />
+  <meta name="theme-color" content="#43B581">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
 </head>
