--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
-	<meta property="og:title" content="Petri's Website" />
+	<description>PogChamp!</description>
+	<meta property="og:title" content="Website Title" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://petrine51.github.io/Petri/" />
-  <meta property="og:description" content="PogChamp!" />
+  <meta property="og:description" content="Website Description" />
   <meta name="theme-color" content="#43B581">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
