--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:title" content="Website Title" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://petrine51.github.io/Petri/" />
-  <meta property="og:description" content="Website Description" />
+	<meta name="description" content="doodoo">
   <meta name="theme-color" content="#43B581">
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
