--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Petri's Website</title>
   <description>PogChamp!</description>
-  <meta property="og:title" content="Website Title" />
+  <meta property="og:title" content="Petri's Website" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://petrine51.github.io/Petri/" />
 	<meta name="description" content="doodoo" />
