--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <head>
-	<title>Petri's Website</title>
-  <description>PogChamp!</description>
-  <meta property="og:title" content="Petri's Website" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://petrine51.github.io/Petri/" />
-	<meta name="description" content="doodoo" />
-  <meta name="theme-color" content="#43B581" />
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="website title" />
+	<meta property="og:description" content="website description" />
+	<meta property="og:url" content="website url" />
+	<meta property="og:image" content="full thumbnail path" />
   <link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
 </head>
