--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<title>Petri's Website</title>
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Petri's Website" />
 	<meta property="og:description" content="Poggers!" />
