--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
+	<meta type=“description”>test</meta>
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Petri's Website" />
 	<meta property="og:description" content="Poggers!" />
