--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<title>Petri's Website</title>
-	<meta type=“description”>test</meta>
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Petri's Website" />
-	<meta property="og:description" content="Poggers!" />
+	<meta property="og:description" content="test" />
 	<meta property="og:url" content="https://petrine51.github.io/Petri/" />
 	<meta property="og:image" content="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" />
   <link rel="stylesheet" type="text/css" href="main.css"/>
