--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta content="It's about me!" property="og:description" />
         <meta content="https://petri.lol" property="og:url" />
         <meta content="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" property="og:image" />
-        <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+        <meta content="#7851a9" data-react-helmet="true" name="theme-color" />
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
 </head>
