--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<meta content="Petri's Website" property="og:title" />
         <meta content="It's about me!" property="og:description" />
         <meta content="https://petri.lol" property="og:url" />
-        <meta content="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" property="og:image" />
+        <meta content="https://cdn.discordapp.com/avatars/289986744705744898/a7b650405003961d4950b7ba1639561a.webp" property="og:image" />
         <meta content="#7851a9" data-react-helmet="true" name="theme-color" />
 	<link rel="stylesheet" type="text/css" href="main.css"/>
 	<script type="text/javascript" src="main.js"></script>
@@ -13,7 +13,7 @@
 <html>
 <body>
 	<div class="boop">
-    <img src="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" id="bap">
+    <img src="https://cdn.discordapp.com/avatars/289986744705744898/a7b650405003961d4950b7ba1639561a.webp" id="bap">
     <h1>Petri</h1>
     <p>I like Games!</p>
 		<div>
