--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
   <title>Petri's About Page</title>
-  <link rel="icon" href="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg">
+  <link rel="icon" href="https://cdn.discordapp.com/avatars/289986744705744898/a7b650405003961d4950b7ba1639561a.webp">
   <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <html>
 <body>
 	<div class="boop">
-    <img src="https://cdn.discordapp.com/attachments/568151620047601664/839816608440647740/KPuM2G1e_400x400_Custom.jpeg" id="bap">
+    <img src="https://cdn.discordapp.com/avatars/289986744705744898/a7b650405003961d4950b7ba1639561a.webp" id="bap">
     <h1>Petri</h1>
     <h2>About Me</h2>
     <p><strong>Discord:</strong> Petrine51#0727</br>
